AvatarService promises, home front, new comment front, translations, front

--- a/src/main/webapp/app/entities/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/post/post-detail.component.html
@@ -48,7 +48,7 @@
                                     <div class="center">
                                         <button class="btn btn-primary" (click)="postCommentsComponent.toggleComment()">
                                             <fa-icon [icon]="'pen'"></fa-icon>
-                                            <span class="hidden-sm-down">Write a comment</span>
+                                            <span class="hidden-sm-down" jhiTranslate="soundgramApp.comment.home.create">Write a comment</span>
                                         </button>
                                     </div>
                                     <div class="center">
@@ -96,5 +96,6 @@
                 </div>
             </div>
         </div>
+        <jhi-scroll-top></jhi-scroll-top>
     </div>
 </div>
