--- a/src/main/webapp/app/shared/postObject/post-object.component.html
+++ b/src/main/webapp/app/shared/postObject/post-object.component.html
@@ -49,7 +49,7 @@
                                     <div class="center">
                                         <button class="btn btn-primary" (click)="postCommentsComponent.toggleComment()">
                                             <fa-icon [icon]="'pen'"></fa-icon>
-                                            <span class="hidden-sm-down">Write a comment</span>
+                                            <span class="hidden-sm-down" jhiTranslate="soundgramApp.comment.home.create">Write a comment</span>
                                         </button>
                                     </div>
                                     <div class="center">
