--- a/src/main/webapp/app/shared/postObject/post-object.component.html
+++ b/src/main/webapp/app/shared/postObject/post-object.component.html
@@ -16,9 +16,9 @@
                                     <div class="media-body ml-3 mt-3">
                                         <div *ngIf="audioFile && usersComments">
                                             <h6 class="d-inline-block text-muted">{{audioFile.users.length}}
-                                                Likes<span>&nbsp;&nbsp;&nbsp;</span></h6>
+                                                <span jhiTranslate="soundgramApp.post.likes">Likes</span><span>&nbsp;&nbsp;&nbsp;</span></h6>
                                             <h6 class="d-inline-block text-muted">{{usersComments.length}}
-                                                Comments</h6>
+                                                <span jhiTranslate="soundgramApp.post.comments">Comments</span></h6>
                                         </div>
                                     </div>
 
