--- a/src/main/webapp/app/users/users.component.html
+++ b/src/main/webapp/app/users/users.component.html
@@ -44,8 +44,8 @@
                     <th scope="col"><span jhiTranslate="userManagement.login">Login</span>
                         <fa-icon [icon]="'user'"></fa-icon>
                     </th>
-                    <th class="narrow-hide" scope="col"><span>FirstName</span></th>
-                    <th class="narrow-hide" scope="col"><span>LastName</span></th>
+                    <th class="narrow-hide" scope="col"><span jhiTranslate="users.firstName">First Name</span></th>
+                    <th class="narrow-hide" scope="col"><span jhiTranslate="users.lastName">Last Name</span></th>
                     <th scope="col"><span jhiTranslate="userManagement.email">Email</span>
                         <fa-icon [icon]="'at'"></fa-icon>
                     </th>
